cleanup and apiId to submit

--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -23,6 +23,7 @@ provider:
     TODOS_TABLE_SEC_INDEX: searchByUserId
     IMAGES_S3_BUCKET: todos-wefsdf-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
+    JWKS_URL: https://udagramapp.eu.auth0.com/.well-known/jwks.json
 
 
 custom:
